syntax = "proto3";

package election;

option go_package = "internal/election";

import "google/protobuf/timestamp.proto";
service RaftLogReplication {
  rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse);
}

enum OperationType {
  SET = 0;
  DELETE = 1;
}

message LogEntry {
  int32 term = 1;
  string key = 2;
  string value = 3;
  OperationType operation = 4;
  google.protobuf.Timestamp time_name = 5;
}

message AppendEntriesRequest {
  int32 term = 1;
  string leader_id = 2;
  int32 prev_log_index = 3;
  int32 prev_log_term = 4;
  repeated LogEntry entries = 5;
  int32 leader_commit = 6;
  string leader_address = 7;
  string token = 8;
}

message AppendEntriesResponse {
  bool success = 1;
  int32 term = 2;
}
